force-app/main/default/objects/Account/fields/ActivePScount__c.field-meta.xml
<CustomField>
    <fullName>ActivePScount__c</fullName>
    <description>roll up summary  of the  PS  records with active statys</description>
    <inlineHelpText>number of Active PS  for this account</inlineHelpText>
    <label>ActivePScount</label>
    <summaryFilterItems>
        <field>ProductSubscription__c.SubscriptionStatus__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>ProductSubscription__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>