force-app/main/default/objects/Account/fields/Dynamic_PS_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_PS_Relationship__c</fullName>
    <description>Show if  the Account has at least 1 Active Product Subscription or if not check if has no  PS  at all</description>
    <formula>IF
 (
 ActivePScount__c &gt; 0,
&quot;Active&quot;,
 IF
   (
     InactivePSCount__c &gt; 0,
     &quot;Inactive&quot;,
     &quot;No Subscription&quot; 
   )
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Show if  the Account has at least 1 Active Product Subscription or if not check if has no  PS  at all</inlineHelpText>
    <label>Dynamic Subscr Relationship</label>
    <type>Text</type>
</CustomField>