force-app/main/default/objects/Account/fields/InactivePSCount__c.field-meta.xml
<CustomField>
    <fullName>InactivePSCount__c</fullName>
    <description>Number of Product Suncription not active (Expired,Terminated)</description>
    <inlineHelpText>Number of Product Suncription not active</inlineHelpText>
    <label>InactivePSCount</label>
    <summaryFilterItems>
        <field>ProductSubscription__c.SubscriptionStatus__c</field>
        <operation>notEqual</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>ProductSubscription__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>