force-app/main/default/objects/Account/fields/ProductsonAccount__c.field-meta.xml
<CustomField>
    <fullName>ProductsonAccount__c</fullName>
    <description>list of  coma separated products(Family,sub-family)</description>
    <inlineHelpText>list of  coma separated products(Family,sub-family)</inlineHelpText>
    <label>ProductsonAccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>