force-app/main/default/objects/Account/fields/ProductsonAccountCount__c.field-meta.xml
<CustomField>
    <fullName>ProductsonAccountCount__c</fullName>
    <description>numbr of  Products on Account (as subsciption family)</description>
    <label>ProductsonAccountCount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>